# small_browser

./: .gitignore  Cargo.toml  README.md  index.html  server.ts  vercel-build.sh  vercel.json
dom/: Cargo.toml
dom/examples/: bin.rs
dom/src/: css.rs  dom.rs  html.rs  layout.rs  lib.rs  style.rs
engine/: Cargo.toml
engine/src/: binding.rs  document.rs  element.rs  lib.rs  main.rs  render_api.rs  renderer.rs  renderer_api.rs  runtime.rs
renderer/: Cargo.toml  build.sh  build_dev.sh
renderer/src/: lib.rs  main.rs  paint.rs
sample/: sample.css  sample.html
src/: css.rs  html.rs  lib.rs  main.rs  paint.rs  util.rs
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: main.js
