[package]
name = "renderer"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
fern = "0.5"
chrono = "0.4"
anyhow = "1"
clap-verbosity-flag = "0.3.1"
structopt = "0.3.21"
thiserror = "1.0"
combine = "4.5.2"
num-traits = "0.2"
num-derive = "0.3"
url = "2.2.1"
reqwest = { version = "0.11", features = ["blocking"] }
unicode-width = "0.1.8"
crossbeam-channel = "0.5.1"
pretty_assertions = "1.4.0"
js-sys = "0.3.69"
wasm-bindgen = "0.2.92"
wasm-logger = "0.2.0"
wasm-bindgen-futures = "0.4.42"
serde = { version = "1.0.202", features = ["derive"] }
once_cell = "1.19.0"
dom = { path = "../dom" }
engine = { path = "../engine" }
# https://github.com/rust-random/getrandom/issues/208#issuecomment-1468480025
getrandom = { version = "0.2", features = ["js"] }

[lib]
crate-type = ["cdylib"]

[dependencies.web-sys]
version = "0.3.4"
features = [
    'CanvasRenderingContext2d',
    'Document',
    'Element',
    'HtmlCanvasElement',
    'TextMetrics',
    'Window',
    'console',
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
    'Storage',
]
